# coursework_4

./: .gitignore  README.md  main.py  pyproject.toml
entities/: address.py  area.py  employer.py  salary.py  vacancy_description.py
src/: base_file_manager.py  base_vacancy.py  baseparser.py  basewriter.py  json_file_manager.py  parser_hh.py  print_mixin_parser.py  user.py  vacancy.py
tests/: conftest.py  test_entities.py  test_parser_hh.py  test_user.py  test_vacancy.py
