[tool.poetry]
name = "coursework-4"
version = "0.1.0"
description = ""
authors = ["Kostin Igor <grizzlygit777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
loguru = "^0.7.2"
requests-cache = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = "^7.5.4"
black = "^24.4.2"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
